# Aliucord

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AliucordBuxa  AndroidManifest.xml  CNAME  Injector.dex  LICENSE  README.md  README_HUN.md  build.gradle  build.gradle.kts  contributors.json  data.json  gradle.properties  gradlew  jitpack.yml  manifest.patch  settings.gradle  settings.gradle.kts
.assets/: AndroidManifest-debuggable.xml  AndroidManifest.xml  data.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: blank_issue.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-aliucord.yml  build-injector.yml  build-installer.yml  build.yml  fetch-contributors.yml  generate-dokka.yml  generate-javadoc.yml  publish-aliucord.yml  start-jitpack.yml  test.yml  upload-pr-artifact.yml  wrapper-validation.yml
Aliucord/: build.gradle  build.gradle.kts
DexPatcher/: build.gradle
DiscordStubs/: build.gradle
Injector/: build.gradle  build.gradle.kts
Installer/: .gitignore  build.gradle  pubspec.yaml
Installer/lib/: icons.dart  main.dart
aliucord/: build.gradle.kts
docs/: cppreference-doxygen-web.tag.xml  doxygen.cfg
gradle/: libs.versions.toml
injector/: build.gradle.kts
installer/: .metadata  .temp  pubspec.yaml
installer/android/: build.gradle  (+1 more)
kotlin-stdlib/: README.md  build.gradle.kts
lib/: pine-LICENSE  pine-core-0.2.4.aar
lsplant/: build.gradle.kts
lsplant/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  common.hpp  logging.hpp  lsplant.cc
lsplant/src/main/jni/art/mirror/: class.hpp
lsplant/src/main/jni/art/runtime/: art_method.hpp  class_linker.hpp  dex_file.hpp  handle.hpp  instrumentation.hpp  obj_ptr.hpp  object_reference.hpp  reflective_handle.hpp  reflective_reference.hpp  runtime.hpp  thread.hpp  thread_list.hpp  value_object.hpp
lsplant/src/main/jni/art/runtime/gc/: collector_type.hpp  gc_cause.hpp  scoped_gc_critical_section.hpp
lsplant/src/main/jni/art/runtime/jit/: jit_code_cache.hpp
lsplant/src/main/jni/art/runtime/jni/: jni_id_manager.h
lsplant/src/main/jni/include/: lsplant.hpp
lsplant/src/main/jni/include/utils/: hook_helper.hpp  jni_helper.hpp
patches/: README.md  build.gradle.kts
test/: build.gradle.kts
test/src/main/jni/: CMakeLists.txt  elf_util.cpp  elf_util.h  logging.h  test.cpp
voice/: README.md  build.gradle.kts
(+1088 files in other folders)
